# project-voice

./: .eslintignore  .eslintrc.json  .gcloudignore  .gitignore  AGENTS.md  DEPLOYMENT.md  README.md  app.yaml  lit-localize.json  macro.py  main.py  package-lock.json  package.json  postinstall.sh  pyproject.toml  requirements-dev.txt  requirements.txt  secrets_helper.py  system-prompt.txt  tsconfig.json  zhuyin_implementation_log.md
.github/workflows/: scorecard.yml  unittest.yml
.storybook/: main.ts  preview.ts
docker/: Dockerfile
ios/: IOS_WEB_FEATURE_PARITY.md  README.md  WEB_IOS_COMPARISON.md
src/: config-storage.ts  constants.ts  input-history.ts  keyboard.ts  language.ts  macro-api-client.ts  pv-app-css.ts  pv-app.ts  pv-button.ts  pv-character-input.ts  pv-conversation-history.ts  pv-expand-keypad.ts  pv-functions-bar.ts  pv-handle-button.ts  pv-scalable-textarea.ts  pv-setting-panel.ts  pv-suggestion-stripe.ts  pv-textarea-wrapper.ts  state.ts
src/keyboards/: pv-fifty-key-keyboard.ts  pv-single-row-keyboard.ts
src/stories/: pv-button.stories.ts  pv-fifty-key-keyboard.stories.ts
src/tests/: test_config-storage.ts  test_input-history.ts  test_language.ts  test_macro-api-client.ts  test_pv-app.ts  test_pv-suggestion-stripe.ts  test_state.ts
static/: index.css
templates/: index.html
templates/prompts/: SentenceJapaneseLong20241002.jinja2  SentenceJapaneseLong20251205.jinja2  SentenceTraditionalChineseZhuyin20260316.jinja2  WordTraditionalChineseZhuyin20260316.jinja2
tools/: simple_simulator.py  simple_simulator_ja.py
xliff/: ja.xlf
(+17 files in other folders)
