[project]
name = "project-voice"
version = "0.0.1"
description = "Communication support tool powered by generative AI"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-seasurf>=2.0.0",
    "google-genai>=1.68.0",
    "gunicorn>=25.1.0",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "ipadic>=1.0.0",
    "mecab-python3>=1.0.12",
    "pytest>=9.0.2",
    "retry>=0.9.2",
    "tinysegmenter>=0.4",
    "yapf>=0.43.0",
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-vv"
